--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,14 @@
-a {
-    text-decoration: none;
+.link_button {
     color: black;
+    text-decoration: none;
+}
+
+#link_mail {
+    color: white;
+    text-decoration: none;
+}
+
+small {
+    justify-content: center;
+    text-align: center;
 }
